--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   .mobile-container {
     max-width: 480px;
     margin: auto;
-    background-color: #555;
+    background-color: rgba(252, 252, 252, 0.168);
     height: 500px;
     color: white;
     border-radius: 10px;
@@ -14,7 +14,7 @@ body {
   
   .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: rgba(215, 215, 215, 0.187);
     position: relative;
   }
   
@@ -34,52 +34,46 @@ body {
   }
   
   .topnav a.icon {
-    background: black;
     display: block;
     position: absolute;
     right: 0;
     top: 0;
   }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
+
   
   .active {
     background-color: transparent;
     color: white;
+    visibility: hidden;
+    
   }
 
-header {
+
+.header-container {
     height: 100vh;
-    width: 100%;
     background-image: url(/assets/negative-space-black-forest-dawn.jpg);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    justify-items: center;
-    align-content: center;
+    background-size: cover;
 }
 
 .header-text {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    justify-content: center;
     align-items: center;
     justify-items: center;
-    font-size: large;
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
 }
 
-h4, h2, p {
+h4, h2, li, p {
     color: white;
     text-size-adjust: 1.5em;
 }
 
-main {
-    background-color: wheat;
-
+ul {
+    list-style-type: none;
 }
 
 section {
@@ -99,7 +93,6 @@ section {
     justify-content: center;
     align-items: center;
     justify-items: center;
-    background-color: aqua;
 }
 
 .container {
@@ -116,7 +109,7 @@ img {
 h6 {
     width: 80%;
     height: 80px;
-    background-color: rgb(220, 212, 212);
+    background-color: lightgray;
     border-radius: 5px;
     display: flex;
     justify-content: center;
@@ -147,4 +140,10 @@ footer {
         width: 50%;
     }
     
+    .adress {
+        display: flex;
+        flex-direction: row;
+        padding: 20px 20px;
+    }
+
 }
